RESOLVED FIXED191338
REGRESSION (r237878): css-dark-mode/supported-color-schemes.html is failing on Mojave
https://bugs.webkit.org/show_bug.cgi?id=191338
Summary REGRESSION (r237878): css-dark-mode/supported-color-schemes.html is failing o...
Timothy Hatcher
Reported 2018-11-06 16:37:38 PST
Semantic colors stopped updating when no prefers-color-scheme media query was used.
Attachments
Patch (1.55 KB, patch)
2018-11-06 16:41 PST, Timothy Hatcher
dino: review+
timothy: commit-queue-
Typo Fix (1.55 KB, patch)
2018-11-06 16:54 PST, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-11-06 16:41:55 PST Comment hidden (obsolete)
Timothy Hatcher
Comment 2 2018-11-06 16:54:18 PST
Created attachment 354032 [details] Typo Fix
WebKit Commit Bot
Comment 3 2018-11-06 17:59:59 PST
Comment on attachment 354032 [details] Typo Fix Clearing flags on attachment: 354032 Committed r237906: <https://trac.webkit.org/changeset/237906>
WebKit Commit Bot
Comment 4 2018-11-06 18:00:00 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-11-06 18:01:04 PST
Note You need to log in before you can comment on or make changes to this bug.