REGRESSION (r237878): css-dark-mode/supported-color-schemes.html is failing on Mojave https://bugs.webkit.org/show_bug.cgi?id=191338

Reviewed by Dean Jackson.

* page/Page.cpp:
(WebCore::Page::appearanceDidChange): Add back call to didChangeStyleSheetEnvironment().
It was dropped by mistake when I moved code to appearanceDidChange(). This is needed to
update styles for semantic colors and from controls when the media prefers-color-scheme
media query is not used on the page.


Canonical link: https://commits.webkit.org/206145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237906 268f45cc-cd09-0410-ab3c-d52691b4dbfc